--- a/ignition-translation-cleaner/src/App.css
+++ b/ignition-translation-cleaner/src/App.css
@@ -6,6 +6,11 @@ body {
   color: #333;
 }
 
+body[data-bs-theme='dark'] {
+  background-color: #212529;
+  color: #f8f9fa;
+}
+
 #root {
   width: 100%;
   max-width: 1140px;
